--- a/info.yaml
+++ b/info.yaml
@@ -1,8 +1,8 @@
 # Tiny Tapeout project information (Wokwi project)
 project:
-  wokwi_id:     0       # Set this to the ID of your Wokwi project (the number from the project's URL)
-  title:        ""      # Project title
-  author:       ""      # Your name
+  wokwi_id:     446717164532704257       # Set this to the ID of your Wokwi project (the number from the project's URL)
+  title:        "ECSE LAB 4"      # Project title
+  author:       "David Tverskoy"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
   description:  ""      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
@@ -16,11 +16,11 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
+  ui[0]: "B0"
+  ui[1]: "Cin"
+  ui[2]: "A0"
+  ui[3]: "A1"
+  ui[4]: "B1"
   ui[5]: ""
   ui[6]: ""
   ui[7]: ""
