--- a/info.yaml
+++ b/info.yaml
@@ -4,7 +4,7 @@ project:
   title:        "ECSE LAB 4"      # Project title
   author:       "David Tverskoy"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "2-bit ripple adder"      # One line description of what your project does
   language:     "Wokwi" # other examples include SystemVerilog, Amaranth, VHDL, etc
   clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
 
